--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     gtag('config', 'UA-7580334-2');
   </script>
 
-  <title>Jon Barron</title>
-  
-  <meta name="author" content="Jon Barron">
+  <title>Adil Gupta</title>
+
+  <meta name="author" content="Adil Gupta">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <link rel="icon" type="image/png" href="images/seal_icon.png">
 </head>
@@ -93,7 +93,7 @@
               <p>Variational auto-encoders can be used to disentangle a characters style from its content.</p>
             </td>
           </tr>
-          
+
           <tr onmouseout="dpzlearn_stop()" onmouseover="dpzlearn_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
@@ -126,7 +126,7 @@
               <p>Considering the optics of dual-pixel image sensors improves monocular depth estimation techniques.</p>
             </td>
           </tr>
-          
+
           <tr onmouseout="porlight_stop()" onmouseover="porlight_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
@@ -196,8 +196,8 @@
               <a href="https://arxiv.org/abs/1701.03077">arxiv</a> /
               <a href="https://drive.google.com/open?id=1HNveL7xSNh6Ss7sxLK8Mw2L1Fc-rRhL4">supplement</a> /
               <a href="https://youtu.be/BmNKbnF69eY">video</a> /
-              <a href="https://www.youtube.com/watch?v=4IInDT_S0ow&t=37m22s">talk</a> / 
-              <a href="https://drive.google.com/file/d/1GzRYRIfLHvNLT_QwjHoBjHkBbs3Nbf0x/view?usp=sharing">slides</a> / 
+              <a href="https://www.youtube.com/watch?v=4IInDT_S0ow&t=37m22s">talk</a> /
+              <a href="https://drive.google.com/file/d/1GzRYRIfLHvNLT_QwjHoBjHkBbs3Nbf0x/view?usp=sharing">slides</a> /
               <a href="https://github.com/google-research/google-research/tree/master/robust_loss">tensorflow code</a> /
               <a href="https://github.com/jonbarron/robust_loss_pytorch">pytorch code</a> /
               <a href="data/BarronCVPR2019_reviews.txt">reviews</a> /
@@ -278,7 +278,7 @@
               <br>
               <a href="https://arxiv.org/abs/1811.11127">arxiv</a> /
               <a href="http://timothybrooks.com/tech/unprocessing/">project page</a> /
-              <a href="https://github.com/google-research/google-research/tree/master/unprocessing">code</a> / 
+              <a href="https://github.com/google-research/google-research/tree/master/unprocessing">code</a> /
               <a href="data/BrooksCVPR2019.bib">bibtex</a>
               <p></p>
               <p>We can learn a better denoising model by processing and unprocessing images the same way a camera does.</p>
@@ -316,7 +316,7 @@
               <a href="https://drive.google.com/file/d/1dUQwBMmQdYYIP0zHR_nDQY-uQbaMdcSN/view?usp=sharing">supplement</a> /
               <a href="http://timothybrooks.com/tech/motion-blur/">project page</a> /
               <a href="https://www.youtube.com/watch?v=8T1jjSz-2V8">video</a> /
-              <a href="https://github.com/google-research/google-research/tree/master/motion_blur">code</a> / 
+              <a href="https://github.com/google-research/google-research/tree/master/motion_blur">code</a> /
               <a href="data/BrooksBarronCVPR2019.bib">bibtex</a>
               <p></p>
               <p>Frame interpolation techniques can be used to train a network that directly synthesizes linear blur kernels.</p>
