--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <tr style="padding:0px">
             <td style="padding:2.5%;width:63%;vertical-align:middle">
               <p style="text-align:center">
-                <name>Jon Barron</name>
+                <name>Adil Gupta</name>
               </p>
               <p>I am a final year student at  <a href="https://ai.google/research">Google Research</a>, where I work on computer vision and computational photography.
               </p>
