--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
               <p style="text-align:center">
                 <name>Adil Gupta</name>
               </p>
-              <p>I am a final year undergraduate student in Department of Electrical Engineering at <a href="https:iitb.ac.in">IIT Bombay</a>
+              <p>I am a final year undergraduate student in Department of Electrical Engineering at <a href="https:iitb.ac.in">IIT Bombay.</a>
               </p>
-              <p>
+              <p>I am interested in Speech Processing, Speech enhancement and generation, Music information processing. I am also interested in applications of deep learning in these fields. 
               </p>
               <p style="text-align:center">
                 <a href="mailto:jonbarron@gmail.com">Email</a> &nbsp/&nbsp
