--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
               <a href="TODO">
                 <papertitle>Speech enhancement for real time applications</papertitle>
               </a>
+              <br>
+                <strong>Kohei Asada-san, Kyosuke Matsumoto-san</strong>
+              </br>
             </td>
           </tr>
 
@@ -167,7 +170,7 @@
               <p>A single robust loss function is a superset of many other common robust loss functions, and allows training to automatically adapt the robustness of its own loss.</p>
             </td>
           </tr>
-          
+
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
