--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
               </a>
               <br>
                 <strong>Kohei Asada-san, Kyosuke Matsumoto-san</strong>
+              <br>
+                <p> Researched on methods for real time speech enhancement in applications requiring very low latency.  
             </td>
           </tr>
 
