--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               <br>
                 <strong>Kohei Asada-san, Kyosuke Matsumoto-san</strong>
               <br>
-                <p> Researched on methods for real time speech enhancement in applications requiring very low latency.  
+                <p> Researched and developed deep learning based methods for real time speech enhancement in applications having low latency requirement. Also extended the idea for microphone arrays. Exact details have been kept confidential.
             </td>
           </tr>
 
