--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
-                <img src='images/font_before.png'>
+                <img src='images/sony.jpeg'>
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
