add hyperlinks to reports, etc.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
-  <link rel="icon" type="image/png" href="images/adil.jpeg">
+  <link rel="icon" type="image/png" href="images/me_circle.png">
 </head>
 
 <body>
@@ -29,20 +29,19 @@
               <p style="text-align:center">
                 <name>Adil Gupta</name>
               </p>
-              <p>I am a final year undergraduate student in Department of Electrical Engineering at <a href="https:iitb.ac.in">IIT Bombay.</a>
+              <p>I am a senior undergraduate pursuing B.Tech in Electrical Engineering at <a href="https:iitb.ac.in">IIT Bombay.</a>
               </p>
-              <p>My Bachelor’s thesis is supervised by Prof. Preeti Rao, we are working on speech enhancement algorithms to improve the assessment of children's oral reading. I have recently completed an internship at Sony, Japan where I researched on deep learning based speech enhancement methods for real time applications.
+              <p>My Bachelor’s thesis is supervised by Prof. Preeti Rao, we are researching on speech enhancement algorithms to improve the automatic assessment of children's oral reading. I have recently completed an internship at Sony, Japan where I researched on deep learning based speech enhancement methods for real time applications.
               </p>
               <p style="text-align:center">
-                <a href="mailto:jonbarron@gmail.com">Email</a> &nbsp/&nbsp
-                <a href="data/JonBarron-CV.pdf">CV</a> &nbsp/&nbsp
-                <a href="data/JonBarron-bio.txt">Biography</a> &nbsp/&nbsp
-                <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Google Scholar</a> &nbsp/&nbsp
-                <a href="http://www.linkedin.com/in/jonathanbarron/"> LinkedIn </a>
+                <a href="mailto:adilgupta214@gmail.com">Email</a> &nbsp/&nbsp
+                <a href="data/CV.pdf">CV</a> &nbsp/&nbsp
+                <a href="https://github.com/adilgupta">Github</a> &nbsp/&nbsp
+                <a href="https://www.linkedin.com/in/adil-gupta-a33a74133/"> LinkedIn</a>
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/adil.jpeg"><img height = width width = 100% src="images/adil_circle.png" class="hoverZoomLink"></a>
+              <a href="images/me.jpg"><img height = width width = 100% src="images/me_circle.png" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
@@ -51,7 +50,10 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research Projects</heading>
               <p>
-                I'm interested in speech and acoustic signal processing, audio and music technology, natural language processing and application of deep learning in these fields. I have mentoined some of the recent projects below, please refer to my CV for a complete list.
+                My major research interests lie in signal processing and communication systems with emphasis on speech and
+acoustic signal processing, audio and music technology, natural language processing and application of deep
+learning in these fields. I am also interested in Probability, Statistics, Machine learning and their applications in speech, image and video processing.
+I have mentoined some of the recent projects below, please refer to my <a href="data/CV.pdf">CV</a> for a complete list.
               </p>
             </td>
           </tr>
@@ -64,11 +66,11 @@
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://arxiv.org/abs/1905.00824">
+
                 <papertitle>Speech enhancement for improvement in Children's oral reading assessment</papertitle>
-              </a>
+
               <br>
-              <a href = "https://www.ee.iitb.ac.in/course/~daplab/">Digital Audio Processing Lab</a>, IIT Bombay(July 2019 - )
+              <a href = "https://www.ee.iitb.ac.in/course/~daplab/">Digital Audio Processing Lab</a>, IIT Bombay(July 2019 - current)
               <br>
               <a href = "https://www.ee.iitb.ac.in/wiki/faculty/prao" >Professor Preeti Rao </a>
               <br>
@@ -83,9 +85,9 @@
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="TODO">
+
                 <papertitle>Speech enhancement for real time applications</papertitle>
-              </a>
+
               <br>
               Sony, Tokyo, Japan (May 2019 - July 2019)
               <br>
@@ -102,13 +104,13 @@
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://arxiv.org/abs/1904.05822">
+
                 <papertitle>Confidence estimation of impacts</papertitle>
-              </a>
+
               <br>
               Balbix, San Jose, California(May 2018 - July 2018)
               <br>
-              Dr. Pavan Ramkumar, Dr. Vinay Sridhara
+              <a href = "pavanramkumar.github.io">Dr. Pavan Ramkumar</a>, Dr. Vinay Sridhara
               <br>
               Developed and implemented a model to calculate the effective breach impact of devices in a network using fully Bayesian inference with a cutting edge deep learning framework to model confidence.
           </tr>
@@ -130,9 +132,9 @@
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="TODO">
+
                 <papertitle>Low Resource Secure Voice Communication System</papertitle>
-              </a>
+
               <br>
               <a href = "https://www.ee.iitb.ac.in/wiki/faculty/vmgadre"> Prof. Vikram M. Gadre </a>
               <br>
@@ -147,9 +149,9 @@
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://arxiv.org/abs/1904.05822">
+
                 <papertitle>High Speed Polymer Optical Fiber Link</papertitle>
-              </a>
+
               <br>
               <a href = "https://www.ee.iitb.ac.in/~akumar/"> Prof. Kumar Appaiah</a> and <a href = "https://www.ee.iitb.ac.in/wiki/faculty/jjohn">Prof. Joseph John </a>
               <br>
@@ -163,9 +165,9 @@
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://arxiv.org/abs/1904.05822">
+
                 <papertitle>Google Landmark Recognition Challenge</papertitle>
-              </a>
+
               <br>
               <a href = "https://www.cse.iitb.ac.in/~pjyothi/"> Prof. Preethi Jyothi </a>
               <br>
@@ -180,9 +182,9 @@
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://arxiv.org/abs/1904.05822">
+
                 <papertitle>Piplined RISC Architecture</papertitle>
-              </a>
+
               <br>
               <a href = "https://www.ee.iitb.ac.in/~viren/"> Prof. Virendra Singh </a>
               <br>
