--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
               <p style="text-align:center">
                 <name>Adil Gupta</name>
               </p>
-              <p>I am a senior undergraduate pursuing B.Tech in Electrical Engineering at <a href="https:iitb.ac.in">IIT Bombay.</a>
-              </p>
-              <p>My Bachelor’s thesis is supervised by Prof. Preeti Rao, we are researching on speech enhancement algorithms to improve the automatic assessment of children's oral reading. I have recently completed an internship at Sony, Japan where I researched on deep learning based speech enhancement methods for real time applications.
+              <p>Hi, I am a senior undergraduate pursuing B.Tech in Electrical Engineering at <a href="https://iitb.ac.in">IIT Bombay.</a>
+                <br>
+                My Bachelor’s thesis is supervised by <a href = "https://www.ee.iitb.ac.in/wiki/faculty/prao">Prof. Preeti Rao</a>. We are researching on speech enhancement algorithms to improve the automatic assessment of children's oral reading. I have recently completed an internship at Sony, Japan where I researched on deep learning based speech enhancement methods for real time applications.
               </p>
               <p style="text-align:center">
                 <a href="mailto:adilgupta214@gmail.com">Email</a> &nbsp/&nbsp
@@ -53,7 +53,7 @@
                 My major research interests lie in signal processing and communication systems with emphasis on speech and
 acoustic signal processing, audio and music technology, natural language processing and application of deep
 learning in these fields. I am also interested in Probability, Statistics, Machine learning and their applications in speech, image and video processing.
-I have mentoined some of the recent projects below, please refer to my <a href="data/CV.pdf">CV</a> for a complete list.
+I have mentioned some of the recent projects below, please refer to my <a href="data/CV.pdf">CV</a> for a complete list.
               </p>
             </td>
           </tr>
@@ -70,11 +70,13 @@ I have mentoined some of the recent projects below, please refer to my <a href="
                 <papertitle>Speech enhancement for improvement in Children's oral reading assessment</papertitle>
 
               <br>
-              <a href = "https://www.ee.iitb.ac.in/course/~daplab/">Digital Audio Processing Lab</a>, IIT Bombay(July 2019 - current)
+              <a href = "https://www.ee.iitb.ac.in/course/~daplab/">Digital Audio Processing Lab</a>, IIT Bombay (July 2019 - current)
               <br>
               <a href = "https://www.ee.iitb.ac.in/wiki/faculty/prao" >Professor Preeti Rao </a>
               <br>
-              Researching on speech enhancement algorithms for improvement in children's oral reading assessment. The enhanced recordings are to be automatically rated for reading fluency by using ASR and prosody detection
+              Conventional speech enhancement methods usually modify the speech characteristics such as pitch, which is crucial for prosody assessment task.
+              We are currently researching methods of speech enhancement which preserves the speech characteristics and improves automatic oral reading assessment.
+              The enhanced recordings are to be automatically rated for reading fluency by using ASR and prosody detection.
           </tr>
 
 
@@ -93,7 +95,7 @@ I have mentoined some of the recent projects below, please refer to my <a href="
               <br>
                 <strong>Kohei Asada-san, Kyosuke Matsumoto-san</strong>
               <br>
-                Researched and developed deep learning based methods for real time speech enhancement in applications having low latency requirement. Also extended the idea to microphone arrays. Exact details have been kept confidential.
+                Researched and developed deep learning based methods for real time speech enhancement in applications having requirement of very low latency. Also extended the idea to microphone arrays. Exact details have been kept confidential.
             </td>
           </tr>
 
@@ -108,11 +110,12 @@ I have mentoined some of the recent projects below, please refer to my <a href="
                 <papertitle>Confidence estimation of impacts</papertitle>
 
               <br>
-              Balbix, San Jose, California(May 2018 - July 2018)
+              Balbix, San Jose, California (May 2018 - July 2018)
               <br>
               <a href = "pavanramkumar.github.io">Dr. Pavan Ramkumar</a>, Dr. Vinay Sridhara
               <br>
-              Developed and implemented a model to calculate the effective breach impact of devices in a network using fully Bayesian inference with a cutting edge deep learning framework to model confidence.
+              Device breach impact is the amount information that would be compromised if a breach were to occur through any particular device in a network.
+              We Developed and implemented a probabilistic model to calculate the effective breach impact using fully Bayesian inference with a cutting edge deep learning framework and extended the method to calculate confidence level.
           </tr>
 
         </tbody></table>
