--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/me.jpg"><img height = width width = 100% src="images/me_circle.png" class="hoverZoomLink"></a>
+              <a href="images/me.jpg"><img height = width width = 100% src="images/me_circle.jpg" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
