--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               </p>
               <p style="text-align:center">
                 <a href="mailto:adilgupta214@gmail.com">Email</a> &nbsp/&nbsp
-                <a href="data/CV.pdf">CV</a> &nbsp/&nbsp
+                <a href="data/CV\(1).pdf">CV</a> &nbsp/&nbsp
                 <a href="https://github.com/adilgupta">Github</a> &nbsp/&nbsp
                 <a href="https://www.linkedin.com/in/adil-gupta-a33a74133/"> LinkedIn</a>
               </p>
