--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               </p>
               <p style="text-align:center">
                 <a href="mailto:adilgupta214@gmail.com">Email</a> &nbsp/&nbsp
-                <a href="data/CV\(1).pdf">CV</a> &nbsp/&nbsp
+                <a href="data/CV (1).pdf">CV</a> &nbsp/&nbsp
                 <a href="https://github.com/adilgupta">Github</a> &nbsp/&nbsp
                 <a href="https://www.linkedin.com/in/adil-gupta-a33a74133/"> LinkedIn</a>
               </p>
@@ -56,7 +56,7 @@
                 My major research interests lie in signal processing and communication systems with emphasis on speech and
 acoustic signal processing, audio and music technology, natural language processing and application of deep
 learning in these fields. I am also interested in Probability, Statistics, Machine learning and their applications in speech, image and video processing.
-I have mentioned some of the recent projects below, please refer to my <a href="data/CV\(1).pdf">CV</a> for a complete list.
+I have mentioned some of the recent projects below, please refer to my <a href="data/CV (1).pdf">CV</a> for a complete list.
               </p>
             </td>
           </tr>
