--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <p style="text-align:center">
                 <name>Adil Gupta</name>
               </p>
-              <p>Hi, I am graduate in Electrical Engineering from <a href="https://iitb.ac.in">IIT Bombay.</a>
+              <p>Hello, I am graduate in Electrical Engineering from <a href="https://iitb.ac.in">IIT Bombay.</a>
                 <br>
                 My Bachelor’s thesis is supervised by <a href = "https://www.ee.iitb.ac.in/wiki/faculty/prao">Prof. Preeti Rao</a>. We are researching on speech enhancement algorithms to improve the automatic assessment of children's oral reading. I have recently completed an internship at Sony, Japan where I researched on deep learning based speech enhancement methods for real time applications.
               </p>
